--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,12 +1,12 @@
 name: Build Docs
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types:
-      - opened
-      - synchronize
+# on:
+  # push:
+  #   branches:
+  #     - master
+  # pull_request:
+  #   types:
+  #     - opened
+  #     - synchronize
 
 env:
   UV_SYSTEM_PYTHON: 1
