--- a/.github/workflows/push_docs.yml
+++ b/.github/workflows/push_docs.yml
@@ -107,7 +107,7 @@ jobs:
           key: mkdocs-cards-ru-${{ github.ref }}
           path: docs/ru/.cache
       - name: Build Docs
-        run: python ./scripts/docs.py build-lang ${{ matrix.lang }}
+        run: python ./scripts/docs.py build-lang ru
       - uses: actions/upload-artifact@v4
         with:
           name: docs-site-ru
