--- a/.github/workflows/push_docs.yml
+++ b/.github/workflows/push_docs.yml
@@ -121,10 +121,12 @@ jobs:
         with:
           repository: danielkanzel/danielkanzel.github.io
           path: danielkanzel.github.io
+      - name: Cleaning
+        run: git rm -rf danielkanzel.github.io && git clean -fxd
       - name: Copy files
         run: cp -r ./site/* danielkanzel.github.io 
       - name: Git
-        run: cd danielkanzel.github.io && git add danielkanzel.github.io && git commit -m "new site" && git push
+        run: cd danielkanzel.github.io && git add . && git commit -m "new site" && git push
       
       
       
